Bug 440138 - Crash when picking paintoppreset
Summary: Crash when picking paintoppreset
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 440211 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-07-22 05:41 UTC by Razvan Radulescu
Modified: 2021-07-24 09:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Razvan Radulescu 2021-07-22 05:41:36 UTC
SUMMARY
Grab a problematic preset from the github repo, for example: https://github.com/razcore-rad/krita-resources/blob/main/krita/paintoppresets/h)_Charcoal_RazcoreRad.kpp
This is also part of the bundle: https://github.com/razcore-rad/krita-resources/releases/tag/0.4-alpha

Krita doesn't crash in the previous nightly build: 6f58e0c.


STEPS TO REPRODUCE
1. Open Krita
2. Pick a problematic paintoppreset
3. Crash

OBSERVED RESULT
Crash on picking new paintoppreset.

❯ krita.appimage                                                                                                                                                      08:32:49
QObject::startTimer: Timers cannot have negative intervals
Could not find platform independent libraries <prefix>
Could not find platform dependent libraries <exec_prefix>
Consider setting $PYTHONHOME to <prefix>[:<exec_prefix>]
/tmp/.mount_krita.5tSMsJ/usr/lib/krita-python-libs/krita added to PYTHONPATH
qt.svg: Cannot open file '/:16_dark_tab-close.svg', because: No such file or directory
qt.svg: Cannot open file '/:16_dark_tab-close.svg', because: No such file or directory
qt.svg: Cannot open file '/:16_dark_tab-close.svg', because: No such file or directory
qt.svg: Cannot open file '/:16_dark_tab-close.svg', because: No such file or directory
SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37
fish: Job 1, 'krita.appimage' terminated by signal SIGSEGV (Address boundary error)



EXPECTED RESULT
Krita should pick new paintoppreset.


SOFTWARE/OS VERSIONS
Krita

 Version: 5.0.0-prealpha (git 63be085)
 Languages: en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.11
  Version (loaded): 5.12.11

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.11.0-25-generic
  Pretty Productname: Ubuntu 21.04
  Product Type: ubuntu
  Product Version: 21.04
  Desktop: ubuntu:GNOME

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "GeForce GT 750M/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 390.144" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information

  GPU Acceleration: auto
  Memory: 15884 Mb
  Number of Cores: 8
  Swap Location: /tmp

Current Settings

  Current Swap Location: /tmp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 100
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 120
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 3
	Screen: 0
		Name: eDP-1-1
		Depth: 24
		Scale: 1
		Resolution in pixels: 1920x1080
		Manufacturer: AU Optronics
		Model: 
		Refresh Rate: 60
	Screen: 1
		Name: DP-0
		Depth: 24
		Scale: 1
		Resolution in pixels: 1920x1080
		Manufacturer: UGD
		Model: ID160F-
		Refresh Rate: 60
	Screen: 2
		Name: HDMI-1-1
		Depth: 24
		Scale: 1
		Resolution in pixels: 1920x1080
		Manufacturer: Samsung Electric Company
		Model: C27F390-
		Refresh Rate: 60


---------------------
================================================================================
SESSION: 21 Jul 2021 19:38:53 +0300. Executing /home/razcore/.local/bin/krita.appimage

Krita Version: 5.0.0-prealpha (git 6f58e0c), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 185756
-- -- -- -- -- -- -- --
21 Jul 2021 19:38:53 +0300: Style: fusion. Available styles: Windows, Fusion
21 Jul 2021 19:38:54 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
21 Jul 2021 19:38:58 +0300: KisAppimageUpdater: update check finished. Result: 1 Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: 
21 Jul 2021 19:39:07 +0300: Importing application/x-krita to application/x-krita. Location: /home/razcore/Cloud/MEGA/art/sketchbook/a.kra. Real location: /home/razcore/Cloud/MEGA/art/sketchbook/a.kra. Batchmode: 0
21 Jul 2021 19:39:09 +0300: Loaded image from application/x-krita. Size: 1080 * 1080 pixels, 4.16667 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 14
21 Jul 2021 19:39:52 +0300: KisAppimageUpdater: update finished. Result: 0
Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: AppImageUpdate version 1-alpha (commit cb611d8), build 431 built on 2020-03-23 15:06:20 UTC

(process:186007): Gtk-WARNING **: 19:39:32.454: Locale not supported by C library.
	Using the fallback 'C' locale.
Updating from generic server via ZSync
zsync2: Target file: /home/razcore/.local/bin/krita-5.0.0-prealpha-63be085-x86_64.appimage
zsync2: Reading seed file: /home/razcore/.local/bin/krita.appimage
zsync2: Usable data from seed files: 90.366786%
zsync2: Renaming temp file
zsync2: Fetching remaining blocks
zsync2: Downloading from https://build-artifacts.kde.org/binary-factory/Krita_Nightly_Appimage_Build/1322/krita-5.0.0-prealpha-63be085-x86_64.appimage
zsync2: optimized ranges, old requests count 187, new requests count 23

zsync2: Verifying downloaded file
zsync2: checksum matches OK
zsync2: used 245526528 local, fetched 35574976
gpg: key D1FCDC17A3ED3406: public key "KDE Appimage Signing Service <sysadmin@kde.org>" imported
gpg: Total number processed: 1
gpg:               imported: 1
gpg: key D1FCDC17A3ED3406: "KDE Appimage Signing Service <sysadmin@kde.org>" not changed
gpg: Total number processed: 1
gpg:              unchanged: 1
Signature validation passed

21 Jul 2021 19:39:54 +0300: CLOSING SESSION
================================================================================
SESSION: 22 Jul 2021 07:55:47 +0300. Executing /home/razcore/.local/bin/krita.appimage

Krita Version: 5.0.0-prealpha (git 63be085), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 222995
-- -- -- -- -- -- -- --
22 Jul 2021 07:55:47 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 07:55:48 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 07:55:54 +0300: KisAppimageUpdater: update check finished. Result: 0 Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: 
22 Jul 2021 07:58:13 +0300: Importing application/x-krita to application/x-krita. Location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Real location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Batchmode: 0
22 Jul 2021 07:58:14 +0300: Loaded image from application/x-krita. Size: 2160 * 2160 pixels, 4.16667 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 18
22 Jul 2021 07:59:02 +0300: SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37

KRITA DID NOT CLOSE CORRECTLY
================================================================================
SESSION: 22 Jul 2021 07:59:07 +0300. Executing /home/razcore/.local/bin/krita.appimage

Krita Version: 5.0.0-prealpha (git 63be085), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 223405
-- -- -- -- -- -- -- --
22 Jul 2021 07:59:07 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 07:59:08 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 07:59:12 +0300: KisAppimageUpdater: update check finished. Result: 0 Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: 
22 Jul 2021 07:59:17 +0300: Importing application/x-krita to application/x-krita. Location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Real location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Batchmode: 0
22 Jul 2021 07:59:18 +0300: Loaded image from application/x-krita. Size: 2160 * 2160 pixels, 4.16667 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 18
22 Jul 2021 07:59:34 +0300: SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37

KRITA DID NOT CLOSE CORRECTLY
================================================================================
SESSION: 22 Jul 2021 07:59:46 +0300. Executing /home/razcore/.local/bin/krita.appimage

Krita Version: 5.0.0-prealpha (git 63be085), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 223620
-- -- -- -- -- -- -- --
22 Jul 2021 07:59:46 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 07:59:48 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 07:59:52 +0300: KisAppimageUpdater: update check finished. Result: 0 Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: 
22 Jul 2021 07:59:55 +0300: Importing application/x-krita to application/x-krita. Location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Real location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Batchmode: 0
22 Jul 2021 07:59:56 +0300: Loaded image from application/x-krita. Size: 2160 * 2160 pixels, 4.16667 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 18
22 Jul 2021 08:00:10 +0300: SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37
22 Jul 2021 08:00:11 +0300: SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37
22 Jul 2021 08:00:16 +0300: SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37
22 Jul 2021 08:00:17 +0300: SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37

KRITA DID NOT CLOSE CORRECTLY
================================================================================
SESSION: 22 Jul 2021 08:00:27 +0300. Executing krita.appimage

Krita Version: 5.0.0-prealpha (git 63be085), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 223847
-- -- -- -- -- -- -- --
22 Jul 2021 08:00:27 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 08:00:28 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 08:00:32 +0300: KisAppimageUpdater: update check finished. Result: 0 Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: 
22 Jul 2021 08:00:35 +0300: Importing application/x-krita to application/x-krita. Location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Real location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Batchmode: 0
22 Jul 2021 08:00:36 +0300: Loaded image from application/x-krita. Size: 2160 * 2160 pixels, 4.16667 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 18
22 Jul 2021 08:00:43 +0300: SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37

KRITA DID NOT CLOSE CORRECTLY
================================================================================
SESSION: 22 Jul 2021 08:04:44 +0300. Executing krita.appimage

Krita Version: 5.0.0-prealpha (git 63be085), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 224437
-- -- -- -- -- -- -- --
22 Jul 2021 08:04:44 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 08:04:45 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 08:04:49 +0300: KisAppimageUpdater: update check finished. Result: 0 Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: 

KRITA DID NOT CLOSE CORRECTLY
================================================================================
SESSION: 22 Jul 2021 08:24:04 +0300. Executing ./krita-5.0.0-prealpha-6f58e0c-x86_64.appimage

Krita Version: 5.0.0-prealpha (git 6f58e0c), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 226700
-- -- -- -- -- -- -- --
22 Jul 2021 08:24:04 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 08:24:05 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 08:24:09 +0300: KisAppimageUpdater: update check finished. Result: 1 Exit status: 0
path: /home/razcore/Downloads/krita-5.0.0-prealpha-6f58e0c-x86_64.appimage
output: 
22 Jul 2021 08:24:14 +0300: Importing application/x-krita to application/x-krita. Location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Real location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Batchmode: 0
22 Jul 2021 08:24:15 +0300: Loaded image from application/x-krita. Size: 2160 * 2160 pixels, 4.16667 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 18
22 Jul 2021 08:25:07 +0300: CLOSING SESSION
================================================================================
SESSION: 22 Jul 2021 08:28:05 +0300. Executing ./krita-5.0.0-prealpha-6f58e0c-x86_64.appimage

Krita Version: 5.0.0-prealpha (git 6f58e0c), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 227008
-- -- -- -- -- -- -- --
22 Jul 2021 08:28:05 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 08:28:06 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 08:28:10 +0300: KisAppimageUpdater: update check finished. Result: 1 Exit status: 0
path: /home/razcore/Downloads/krita-5.0.0-prealpha-6f58e0c-x86_64.appimage
output: 
22 Jul 2021 08:28:49 +0300: Importing application/x-krita to application/x-krita. Location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Real location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Batchmode: 0
22 Jul 2021 08:28:50 +0300: Loaded image from application/x-krita. Size: 2160 * 2160 pixels, 4.16667 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 18
22 Jul 2021 08:30:50 +0300: Autosaving: /home/razcore/.krita-227008-document_0-autosave.kra
22 Jul 2021 08:30:50 +0300: Converting from application/x-krita to application/x-krita. Location: /home/razcore/.krita-227008-document_0-autosave.kra. Real location: /home/razcore/.krita-227008-document_0-autosave.kra. Batchmode: 0. Configuration: none
22 Jul 2021 08:30:51 +0300: Completed saving /home/razcore/.krita-227008-document_0-autosave.kra (mime: application/x-krita). Result: OK. Size: 19470450. MD5 Hash: FILE_BIGGER_10MB
22 Jul 2021 08:32:25 +0300: Removing autosave file: /home/razcore/.krita-227008-document_0-autosave.kra
22 Jul 2021 08:32:25 +0300: CLOSING SESSION
================================================================================
SESSION: 22 Jul 2021 08:32:52 +0300. Executing krita.appimage

Krita Version: 5.0.0-prealpha (git 63be085), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 227493
-- -- -- -- -- -- -- --
22 Jul 2021 08:32:52 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 08:32:53 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 08:32:57 +0300: KisAppimageUpdater: update check finished. Result: 0 Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: 
22 Jul 2021 08:33:01 +0300: Importing application/x-krita to application/x-krita. Location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Real location: /home/razcore/.local/share/krita/templates/RazcoreRad/.source/digital-cinema-1-1-2160x2160-300dpi-rgb-8bit.kra. Batchmode: 0
22 Jul 2021 08:33:03 +0300: Loaded image from application/x-krita. Size: 2160 * 2160 pixels, 4.16667 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 18
22 Jul 2021 08:33:12 +0300: SAFE ASSERT (krita): "brush" in file /home/appimage/workspace/Krita_Nightly_Appimage_Build/krita/libs/brush/kis_predefined_brush_factory.cpp, line 37

KRITA DID NOT CLOSE CORRECTLY
================================================================================
SESSION: 22 Jul 2021 08:33:14 +0300. Executing krita.appimage

Krita Version: 5.0.0-prealpha (git 63be085), Qt version compiled: 5.12.11, loaded: 5.12.11. Process ID: 227632
-- -- -- -- -- -- -- --
22 Jul 2021 08:33:14 +0300: Style: fusion. Available styles: Windows, Fusion
22 Jul 2021 08:33:15 +0300: Database is up to date. Version: 0.0.10, created by Krita 5.0.0-prealpha, at Tue Jul 6 11:54:36 2021
22 Jul 2021 08:33:19 +0300: KisAppimageUpdater: update check finished. Result: 0 Exit status: 0
path: /home/razcore/.local/bin/krita.appimage
output: 

---------------------


ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2021-07-24 08:03:56 UTC
*** Bug 440211 has been marked as a duplicate of this bug. ***
Comment 2 Halla Rempt 2021-07-24 09:44:31 UTC
Git commit fe2aa5793870e51a7c63abd9aa4c64510a814ddf by Halla Rempt.
Committed on 24/07/2021 at 09:11.
Pushed by rempt into branch 'master'.

Do not crash if a brush tip does not exist

Instead create a default brush tip.
Related: bug 440139

M  +13   -10   libs/image/brushengine/kis_paintop_preset.cpp
M  +1    -4    libs/image/brushengine/kis_paintop_registry.cc
M  +1    -8    libs/ui/kis_canvas_resource_provider.cpp
M  +0    -1    libs/ui/kis_paintop_box.cc
M  +14   -5    plugins/paintops/libpaintop/kis_brush_based_paintop.cpp

https://invent.kde.org/graphics/krita/commit/fe2aa5793870e51a7c63abd9aa4c64510a814ddf