Do not crash if a brush tip does not exist

Instead create a default brush tip.

BUG:440138
BUG:440139